LoadProjects- trying to fix bootstrap alignment

--- a/client/src/westbankstyle.css
+++ b/client/src/westbankstyle.css
@@ -46,7 +46,7 @@ a {
 }
 
 .raiseIt {
-  margin-top: -25px;
+  margin-top: -15px;
 }
 
 .spread {
